openshift/route.template.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: PLACEHOLDER
  namespace: PLACEHOLDER
  annotations:
    haproxy.router.openshift.io/timeout: 1h
    haproxy.router.openshift.io/timeout-tunnel: 1h
spec:
  host: PLACEHOLDER
  to:
    kind: Service
    name: PLACEHOLDER
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
